--- a/apps/wearos/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/apps/wearos/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,6 +4,10 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="#3DDC84"
-        android:pathData="M0,0h108v108h-108z" />
+        android:fillColor="#00000000"
+        android:strokeColor="#FFFFFF"
+        android:strokeWidth="4"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M34,65 Q24,65 24,50 Q24,35 39,35 Q39,20 54,20 Q69,20 69,35 Q84,35 84,50 Q84,65 74,65 M34,65 L74,65" />
 </vector>
